{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "f739c0e6-cdde-f6a2-de20-4d6b510bd2de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsdbsecgroup_dbSecurityGroup_04DF6E0F",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:221082206597:security-group/sg-0c9d08ab43ff236af",
            "description": "Security group for RDS PostgreSQL",
            "egress": [],
            "id": "sg-0c9d08ab43ff236af",
            "ingress": [],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "221082206597",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff7a8c481a69cbce"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "awsdbsecgroup_dbInBound_3BEC5C9A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1435196017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9d08ab43ff236af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.awsdbsecgroup_dbSecurityGroup_04DF6E0F"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "awsdbsecgroup_dbOutBound_5C666303",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2976389320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c9d08ab43ff236af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.awsdbsecgroup_dbSecurityGroup_04DF6E0F"
          ]
        }
      ]
    }
  ]
}